Right way to detect admin in user destroy + valid respond codes
